samples/task/valid/R23.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><info><p>info</p></info><choices><choice><p>Choice 1</p></choice></choices></step></steps>
  </taskbody>
</task>