samples/task/invalid/R27.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><substeps><substep><cmd/><choices><choice><p>Choice</p></choice></choices></substep></substeps></step></steps>
  </taskbody>
</task>